src/pages/Home.css
.App {
   text-align: center;
   background: no-repeat center center fixed;
   background-image: url("../images/dh_DM_mobile2.jpg") !important;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
}


@media (min-width: 980px) {
   .App {
      text-align: center;
      background: no-repeat center 75% fixed;
      background-image: url("../images/dh_DM.jpg") !important;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
   }
}

@media (min-width: 1080px) {
   .App {
      text-align: center;
      background: no-repeat center 64% fixed;
      background-image: url("../images/dh_DM.jpg") !important;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
   }
}

@media (min-width: 1280px) {
   .App{
      text-align: center;
      background: no-repeat center 52% fixed;
      background-image: url("../images/dh_DM.jpg") !important;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
   }
}

.App-header {
   /* background-color: #282c34; */
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   position: relative;
   transition: 0.6s ease-out
}

.blur-App-header {
   backdrop-filter: blur(10px);
   min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
   position: relative;
   transition: 0.3s ease-in;
}

.App-link {
   color: #61dafb;
}

.footer {
   bottom: 0;
   width: 100%;
   padding: 0.75rem;
   background-image: linear-gradient(to left, rgb(142, 187, 198), rgb(201, 231, 239)) !important;
}

/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
 } */

.test {
   text-align: center;
   /* background: repeat center; */
   margin: auto;
   background-image: rgb(115, 115, 224) !important;
   /* -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover; */
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
   margin-bottom: auto;
   text-align: center;
   height: 100%;
   /* width: max-content; */
}

.timeline {
   overflow: scroll;
}

.timelineImage {
   max-width: 6000%;
}

.noMatchImage {
   max-width: 100%;
   max-height: 100% !important;
   display: block;
   margin: auto;
   cursor: pointer;
   margin-top: 10px !important;
   transition: 0.17s;
}

.image {
   max-width: 100%;
   max-height: 100% !important;
   display: block;
   margin: auto;
   cursor: zoom-in;
   margin-top: 10px !important;
   transition: 0.17s;
}

.image:hover {
   opacity: 0.9;
}

.imageTarget {
   position: fixed;
   margin: auto;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   height: 100%;
   background: rgba(0, 0, 0, .7);
   width: 100%;
   -webkit-transition: opacity .5s ease-in-out;
   -moz-transition: opacity .5s ease-in-out;
   -o-transition: opacity .5s ease-in-out;
   transition: opacity .5s ease-in-out;
   overflow: hidden;
}

/* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */

.imageTarget img {
   margin: auto;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   max-height: 98%;
   max-width: 98%;
   border: 3px solid white;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, .3);
   box-sizing: border-box;
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
}

.imageDescription {
   /* position: absolute; */
   margin: auto;
   display: block;
   /* bottom: 0; */
   width: 100%;
   text-align: center;
   color: rgb(255, 255, 255);
   padding: 10px 0;
}

@media (min-width: 500px) {
   .imageTarget img {
      max-height: 95%;
      max-width: 95%;
   }
}

@media (min-width: 1000px) {
   .imageTarget img {
      max-height: 90%;
      max-width: 90%;
   }
}

/* Styles the close link, adds the slide down transition */

a.lightbox-close {
   display: block;
   width: 50px;
   height: 50px;
   box-sizing: border-box;
   background: white;
   color: black;
   text-decoration: none;
   position: absolute;
   top: -80px;
   right: 0;
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
}

/* Provides part of the "X" to eliminate an image from the close link */

a.lightbox-close:before {
   content: "";
   display: block;
   height: 30px;
   width: 1px;
   background: black;
   position: absolute;
   left: 26px;
   top: 10px;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
}

/* Provides part of the "X" to eliminate an image from the close link */

a.lightbox-close:after {
   content: "";
   display: block;
   height: 30px;
   width: 1px;
   background: black;
   position: absolute;
   left: 26px;
   top: 10px;
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
}

/* Uses the :target pseudo-class to perform the animations upon clicking the .imageTarget anchor */

.imageTarget:target {
   opacity: 1;
   top: 0;
   bottom: 0;
}

.imageTarget:target img {
   max-height: 100%;
   max-width: 100%;
}

.imageTarget:target a.lightbox-close {
   top: 0px;
}

.container {
   background-color: rgba(248, 249, 250, 0) !important;
   overflow-x: hidden;
   text-align: left !important;
   overflow: hidden;
   display: block;
   position: relative;
}

@media (min-width: 600px) {
   .container {
      background-color: rgb(248, 249, 250) !important;
      overflow-x: hidden;
      text-align: left !important;
   }
}

/* @media (min-width: 1700px) {
   .container {
      min-width: 84%;
   }
} */

.minHome {
   min-height: 400px;
}

.noMatch {
   min-height: 100vh !important;
}

.bg-light {
   background-image: linear-gradient(to left, rgb(142, 187, 198), rgb(201, 231, 239)) !important;
   /* position: fixed;
   margin-top: 0;
   margin-left: 0;
   margin-right: 0; */
}

.textL {
   width: 100%;
   overflow: hidden;
   margin-bottom: 1rem!important;
}

@media (min-width: 767px) {
   .textL {
      width: 20%;
      display: table;
      overflow: hidden;
      margin-right: 18%!important;
      margin-right: 30% !important;
   }
}

@media (min-width: 991px) {
   .textL {
      width: 20%;
      display: table;
      overflow: hidden;
      margin-right: 18%!important;
      margin-right: 30% !important;
      margin-bottom: 1rem!important;
   }
}

.search {
   flex-wrap: nowrap !important;
}

#searchBar {
   float: right;
   width: 100%;
   height: 3rem;
   border-radius: 3px;
   border: 1px solid #eaeaea;
   padding: 3px 5px;
   font-size: 1rem;
   margin-bottom: 0.8rem;
}

@media (min-width: 767px) {
   #searchBar {
      height: 3rem;
      border-radius: 3px;
      padding: 5px 10px;
      font-size: 0.90rem;
      margin-bottom: 0.6rem;
   }
}

@media (min-width: 992px) {
   .search {
      margin-left: -26px !important;
   }
}

@media (min-width: 1200px) {
   .search {
      margin-left: -38px !important;
   }
}

@media (min-width: 760px) {
   .linkTitle {
      padding-right: 0;
      /* position: absolute; */
      top: 50%;
      /* height: 10em; */
      /* margin-top: -5em; */
   }
}

@media (min-width: 760px) {
   .linkText {
      padding-left: 5px;
   }
}

.inline {
   /* line-height: 2rem; */
   position: relative;
}

.linkTitle:after {
   content: "";
   /* This is necessary for the pseudo element to work. */
   display: block;
   /* This will put the pseudo element on its own line. */
   margin: auto;
   /* This will center the border. */
   /* margin-bottom: 0; */
   /* margin-right: 0; */
   /* margin-top: auto; */
   /* margin-left: auto; */
   width: 80%;
   /* Change this to whatever width you want. */
   padding-top: 0.3rem;
   /* This creates some space between the element and the border. */
   border-bottom: 1px solid rgb(226, 229, 233);
   /* This creates the border. Replace black with whatever color you want. */
}

.textR {
   width: 100%;
   overflow: hidden;
}

@media (min-width: 767px) {
   .textR {
      min-height: 100% !important;
      float: right;
      width: 40%;
      clear: right;
      overflow: hidden;
      margin-left: 1rem!important;
   }
}

.textC {
   background-color: rgb(248, 249, 250) !important;
}

/* @media (min-width: 1700px) {
   .textC {
      min-width: 100%;
   }
} */

.btn {
   border: none;
   background-color: inherit;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
   display: inline-block;
}

.info {
   color: dodgerblue;
   vertical-align: middle !important;
   /* line-height: -5rem !important; */
}

body, html {
   height: 100%;
}

.linkTitle {
   flex-wrap: wrap !important;
}

.diceBackground {
   transition: 0.5s ease-in;
   position: fixed;
   width: 2px;
   height: 2px;
   border-radius: 50%;
}

@media (min-width: 800px) {
   .diceBackground {
      width: 4px;
      height: 4px;
   }
}

.diceBackground:active {
   border-radius: 50%;
   transition: 0.1s ease-out;
}

@media (min-width: 991px) {
   .d20 {
      margin-left: 5px;
      float: left !important;
   }
}

.d20 {
   float: right;
   margin-right: 0px;
   margin-top: 1px;
}

@media (prefers-reduced-motion: no-preference) {
   .color {
      animation: App-logo-spin-mobile infinite 1.5s linear;
   }
   .diceBackground {
      animation: fluctuate-shadow infinite 3s linear;
   }
}

@keyframes App-logo-spin-mobile {
   0%, 100% {
      transform: translateY(0);
   }
   50% {
      transform: translateY(-8px);
   }
}

@keyframes fluctuate-shadow {
   50% {
      box-shadow: 0 0 5em 2.5em rgba(255, 251, 220, 0.795);
   }
}

.color {
   width: 88px;
   height: 88px;
   filter: invert(100%);
   margin: auto !important;
   transition: 0.5s ease-out;
}

@media (min-width: 800px) {
   .color {
      width: 120px;
      height: 120px;
   }
}

.color:active {
   width: 72px;
   height: 72px;
   transition: 0.3s ease;
}

